hphp/test/quick/define.php.expectf
Warning: define() is deprecated and subject to removal from the Hack language in %s on line 7

Warning: define() is deprecated and subject to removal from the Hack language in %s on line 12

Warning: define() is deprecated and subject to removal from the Hack language in %s on line 14

Notice: Constant FOO already defined in %s on line 14

Warning: define() is deprecated and subject to removal from the Hack language in %s on line 15
int(42)
string(5) "hello"
array(3) {
  [0]=>
  string(1) "a"
  [1]=>
  string(1) "b"
  [2]=>
  string(1) "c"
}
=== Enter define_b.php ===

Warning: define() is deprecated and subject to removal from the Hack language in %s/define.inc on line 5
int(42)
string(5) "baz_b"
array(3) {
  [0]=>
  string(1) "a"
  [1]=>
  string(1) "b"
  [2]=>
  string(1) "c"
}
=== Leave define_b.php ===
string(5) "baz_b"

Warning: define() is deprecated and subject to removal from the Hack language in %s on line 24

Notice: Constant BAZ already defined in %s on line 24
string(5) "baz_b"

Warning: define() is deprecated and subject to removal from the Hack language in %s on line 27
HELLOHELLO

Fatal error: Cannot access static:: when no class scope is active in %s on line 35
